--- a/trunk/test-suite/NEWS.txt
+++ b/trunk/test-suite/NEWS.txt
@@ -1,6 +1,21 @@
 	The Systems Biology Markup Language (SBML) Test Suite
 	       NEWS -- history of user-visible changes
 
+=== Version 2.1.2 release (2012-10-09)
+
+* Bug fixes:
+
+  - Models 1117 and 1121 did not have proper 'synopsis' entries in their
+    .m files.  These have been added.
+
+  - The model ids in test 931 were changed from 'case_00930' to 'case_00931'
+
+* Changes since the last update:
+
+  - Models whose L3 versions were split to new test directories now mention
+    this fact in the description of the test in the .m file.
+
+
 === Version 2.1.1 release (2012-08-21)
 
 General note: it is not clearly stated anywhere, but test case
@@ -24,16 +39,6 @@ it does not indicate models are missing.
     regenerating them, and so some old SED-ML files were left from the
     time before the Level 3 models were split out as new cases.  This
     problem was reported by Ilya Kiselev from DevelopmentOnTheEdge.com.
-
-  - Models 1117 and 1121 did not have proper 'synopsis' entries in their
-    .m files.  These have been added.
-
-  - The model ids in test 931 were changed from 'case_00930' to 'case_00931'
-
-* Changes since the last update:
-
-  - Models whose L3 versions were split to new test directories now mention
-    this fact in the description of the test in the .m file.
 
 
 === Version 2.1.0 release (2012-08-06)
