Moved up Lucian's name in the list of authors, to reflect the greater amount of work he's been doing on this.

--- a/trunk/test-suite/AUTHORS.txt
+++ b/trunk/test-suite/AUTHORS.txt
@@ -1,7 +1,7 @@
 	      The SBML Test Suite has been developed by:
  
-	    Sarah Keating, Michael Hucka, Frank Bergmann,
-	   Kimberly Begley, Lucian Smith and Andrew Finney
+            Sarah Keating, Michael Hucka, Frank Bergmann,
+           Lucian Smith, Kimberly Begley, and Andrew Finney
 
 		       with contributions from
 	 Bruce Shapiro and many others in the SBML community.
