--- a/trunk/test-suite/NEWS.txt
+++ b/trunk/test-suite/NEWS.txt
@@ -18,6 +18,8 @@
   - Models whose L3 versions were split to new test directories now mention
     this fact in the description of the test in the .m file.
 
+  - We updated the copyright year.
+
 
 === Version 2.1.1 release (2012-08-21)
 
