--- a/trunk/test-suite/NEWS.txt
+++ b/trunk/test-suite/NEWS.txt
@@ -1,6 +1,12 @@
 	The Systems Biology Markup Language (SBML) Test Suite
 	       NEWS -- history of user-visible changes
 
+=== Version 2.3.1 release (2013-01-27)
+
+The only difference is a change to the settings of case 993.  The
+tolerances have been loosened slightly.
+
+
 === Version 2.3 release (2013-01-16)
 
 The only real difference between this release and 2.2 is the addition
