--- a/trunk/test-suite/NEWS.txt
+++ b/trunk/test-suite/NEWS.txt
@@ -1,7 +1,7 @@
 	The Systems Biology Markup Language (SBML) Test Suite
 	       NEWS -- history of user-visible changes
 
-=== Version 3.1.0 release (2013-##-##)
+=== Version 3.1.0 release (2013-12-10)
 
 Summary of changes to the test cases:
 
