--- a/trunk/test-suite/NEWS.txt
+++ b/trunk/test-suite/NEWS.txt
@@ -1,6 +1,19 @@
 	The Systems Biology Markup Language (SBML) Test Suite
 	       NEWS -- history of user-visible changes
 
+=== Version 3.1.1 release (2014-03-03)
+
+Summary of changes in the SBML Test Runner:
+
+* Fixed handling of network updates to the test cases.  The previous
+  version would incorrectly always report that new test cases are
+  available for downloading, even after the user did an update.
+
+* Bundles the 2014-02-27 release of the test case archive.
+
+* Tested under Mac OS X 10.9 (Mavericks).
+
+
 === Test case archive update for release 3.1.0 (2014-02-27)
 
 This release concentrated on updates to the SED-ML files included with
